--- a/about us.html
+++ b/about us.html
@@ -36,7 +36,7 @@
             <div class="name">
                 <h3>Harold Middleton</h3>
                 <p class="title">Maths teacher</p>
-                <p>With his mastersdegree in mathemathics, Harold have helped over 100 teachers to increease their quality of teaching!.</p>
+                <p>With his mastersdegree in mathemathics, Harold have helped over 100 teachers to increase their quality of teaching!</p>
             </div>
         </div>
     </div>
@@ -47,7 +47,7 @@
             <div class="name">
                 <h3>John Doe</h3>
                 <p class="title">English eacher</p>
-                <p>John is a english teacher and has been helping over 50 other teachers from developed countries!</p>
+                <p>John is an english teacher and has been helping over 50 other teachers from developed countries!</p>
             </div>
         </div>
     </div>
