--- a/about us.html
+++ b/about us.html
@@ -46,7 +46,7 @@
             <img id="img" src="teacher3.jpeg" alt="John" width="400" height="500">
             <div class="name">
                 <h3>John Doe</h3>
-                <p class="title">English eacher</p>
+                <p class="title">English teacher</p>
                 <p>John is an english teacher and has been helping over 50 other teachers from developed countries!</p>
             </div>
         </div>
